# extraordinary-ability-roadmap

./: .env.example  .gitignore  CLAUDE.md  README.md  Technical Architecture.md  architecture.mmd  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: auth.py  config.py  limiter.py  main.py  seed.py
backend/app/agents/: assessment.py  base.py  extraction.py  ingestion.py  pipeline.py  roadmap.py
backend/app/export/: docx_export.py  markdown.py  pdf.py
backend/app/migrations/: scrub_existing_pii.py
backend/app/models/: database.py  schemas.py
backend/app/parsers/: ics_parser.py  image_parser.py  json_parser.py  linkedin_parser.py  mbox_parser.py  pdf_parser.py  router.py
backend/app/prompts/: assessment.py  extraction.py  roadmap.py  shared.py
backend/app/routers/: analyze.py  auth.py  consent.py  data.py  evidence.py  export.py  onboarding.py  profiles.py
backend/app/services/: legal_corpus.py  pii_scrubber.py  vector_db.py
backend/tests/: conftest.py  test_auth.py  test_onboarding.py  test_pathway.py  test_pii_scrubber.py  test_safety.py
docs/plans/: 2026-03-07-full-implementation-design.md  2026-03-07-implementation-plan.md
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  railway.toml  start.sh
shared/: generate_schemas.py
shared/schemas/: CriteriaAssessment.json  ImmigrationProfile.json  ImmigrationRoadmap.json  RawCareerData.json
synthetic-data/: generate.py
synthetic-data/amara-okafor/: chatgpt-export.json  cv.txt  linkedin.txt  media-urls.json
(+31 files in other folders)
